# modelagem_microdados_enem

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
modelagem/: 1.DDL.sql  2.DML.sql  3.NORMALIZA.sql  4.VIEW.sql  5.PROCEDURE.sql  6.TRIGGER.sql  7.QUERIES.sql  8.ALGEBRA.md  DDL.sql
src/: download.py  etl.ipynb  helper.py  requirements.txt
